[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-engine"
version = "0.1.0"
description = "A from-scratch 2D fantasy-console game engine for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "numpy",
    "pysdl2",
    "pysdl2-dll",
    "pillow",
]

[project.scripts]
olympus-editor = "olympus.editor:main"

[tool.setuptools]
packages = ["olympus"]